<resources>
    <string name="app_name">Birthday</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BIRTHDAY PARTIES</string>
    <string name="nav_header_subtitle">vadym.adv@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_shop">Shop</string>
    <string name="menu_fb">Facebook</string>
    <string name="menu_ins">Instagram</string>
    <string name="menu_info">Info</string>
    <string name="menu_tel_group">Група Україна</string>
    <string name="menu_ff_group">True Family Community</string>
    <string name="communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="share_by">Share:</string>
    <string name="share_body">I want to share "Birthday" application.\n</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    // INVALID VALUE
    <string name="no_internet">No internet connection</string>

    // INFO VIEW
    <string name="info_text1">Привіт, я Вадим - розробник даного додатка. Ідея його полягає в тому, щоб отримувати сповіщення про День народження братів / сестер нашої спільноти.</string>
    <string name="info_text2">Можете бути певними, що окрім спільноти доступу до цього додатка ніхто не має. Можна ознайомитися із <a href="https://sites.google.com/view/birthday-app/privacy-policy?authuser=0">Privacy Policy and Term of Use</a>.</string>
    <string name="info_text3">Завжди радий буду отримати певний відгук або пропозицію щодо вдосконалення додатку.</string>
    <string name="info_text4">Благослови, Боже, вас та ваші родини.</string>
    <string name="info_text5">Все буде Чонільгук!</string>

    // CREATE ITEM PERSON
    <string name="select_photo">Select photo</string>
    <string name="create_person_name">Person name</string>

    <string-array name="group_names">
        <item>Preschoolers</item>
        <item>Elementary School</item>
        <item>Secondary School</item>
        <item>High School</item>
        <item>Adults</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>