<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_cake"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tl"
            android:icon="@drawable/ic_telegram"
            android:title="@string/menu_tel_group" />
        <item
            android:id="@+id/nav_tf"
            android:icon="@drawable/ff"
            android:title="@string/menu_ff_group" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/flashka"
            android:title="@string/menu_info" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/send"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>